--- a/index.html
+++ b/index.html
@@ -28,6 +28,39 @@
         </div>
     </section>
 
+    <section class="recent-projects">
+      <div class="projects-row">
+        <div class="projects"></div>
+        <div class="projects"></div>
+        <div class="projects"></div>
+      </div>
+      <div class="projects-row">
+        <div class="projects"></div>
+        <div class="projects"></div>
+        <div class="projects"></div>
+      </div>
+
+    </section>
+
+    <section class="story">
+    <div class="story-details"></div>
+
+    </section>
+
+    <section class="what-i-do">
+
+      <div class="particular-thing"></div>
+      <div class="particular-thing"></div>
+      <div class="particular-thing"></div>
+      <div class="particular-thing"></div>
+    </section>
+
+    <section class="footer">
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+    </section>
 
   </body>
 
